# tclscan

./: Cargo.toml  INSTALL.md  LICENSE  README.md  mkbind.sh  subst_irule.sh
.cargo/: config
src/: lib.rs  main.rs  mytcl.h  rstcl.rs  tcl.rs  tclscan.rs
