[package]

name = "tclscan"
version = "0.0.1"
authors = ["Aidan Hobson Sayers <aidanhs@cantab.net>"]

[dependencies]
docopt = "0.6.62"
docopt_macros = "0.6.62"
enum_primitive = "0.0.2"
num = "0.1.24"
rustc-serialize = "0.3.14"

[dependencies.bindgen]
git = "https://github.com/crabtw/rust-bindgen.git"
branch = "master"

[[bin]]

name = "tclscan"
